Upgrade Writer to Cassandra 5; upgrade Java support to version 11+